[package]
name = "bmart"
version = "0.2.12"
edition = "2021"
authors = ["Serhij S. <div@altertech.com>"]
license = "Apache-2.0"
description = "Bohemia Automation common tools library"
readme = "README.md"
keywords = ["process", "workers", "tools"]

[dependencies]
tokio = { version = "1.9.0", features = ["full"] }
nix = "0.22.0"
sysinfo = "0.29.2"
log = "0.4.14"
triggered = "0.1.2"
uuid = { version = "0.8", features = ["v4"] }
colored = "1"
bmart-derive = "0.1.3"
async-channel = "2.2.1"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.6", features = ["psapi", "shellapi"]}
